--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,16 @@
 body {
     padding-top: 5rem;
 }
+
+.photogrid .photos img{
+    width:270px;
+    height:230px;
+    margin:10px;
+    border-width: 1px;
+    border-color: black;
+}
+
+.photogrid {
+    display:flex;
+    flex-wrap:wrap;
+}
